--- a/asia.html
+++ b/asia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>أفضل الوجهات في آسيا</title>
+  <title>Paygo - وجهات آسيا</title>
 
   <!-- إضافة خط Cairo من Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,6 +96,7 @@
       transition: opacity 0.3s ease;
       opacity: 1;
       z-index: 1001;
+      display: block; /* تفعيل القائمة المنسدلة افتراضيًا */
     }
 
     .navbar-collapse.collapsing {
@@ -142,53 +143,52 @@
     }
 
     .destinations { padding: 20px; }
-    .destination-card { background: #2a2a2a; color: #fff; border-radius: 12px; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.3); height: 100%; }
-    .destination-card img { width: 100%; border-radius: 8px; height: 120px; object-fit: cover; }
-    .destination-card h5 { margin-top: 10px; }
-    .footer { background-color: #222; color: #fff; text-align: center; padding: 12px; }
-    #ad-slider { position: relative; height: 150px; border-radius: 12px; overflow: hidden; margin: 20px auto; z-index: 1; }
-    .ad-slide { position: absolute; top: 0; left: 0; width: 100%; opacity: 0; transition: opacity 2s ease-in-out; }
-    .ad-slide.active { opacity: 1; z-index: 1; }
-    .fade img { width: 100%; height: 150px; object-fit: cover; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
-    .clock-circle { position: relative; width: 100px; height: 100px; margin: 0 auto; border: 4px solid #aaa; border-radius: 50%; background: #fff; box-shadow: 0 2px 10px rgba(0,0,0,0.4); }
-    .hand { position: absolute; bottom: 50%; left: 50%; transform-origin: bottom center; background: #333; border-radius: 2px; }
-    .hour { width: 4px; height: 25px; }
-    .minute { width: 3px; height: 35px; }
-    .second { width: 2px; height: 40px; }
-    .clock-circle .number { position: absolute; width: 100%; height: 100%; font-size: 10px; color: #333; }
-    .clock-circle .number span { position: absolute; transform: translate(-50%, -50%); }
-    .marketing-box { background-color: #f9f4ea; border-radius: 20px; padding: 20px; margin: 30px auto 10px auto; max-width: 900px; box-shadow: 0 0 10px rgba(0,0,0,0.05); display: flex; flex-direction: column; gap: 0px; }
-    .marketing-feature { display: flex; align-items: flex-start; padding: 0 24px; padding-left: 32px; line-height: 1.7; word-break: break-word; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
-    .marketing-feature:not(:last-child) { margin-bottom: 0; }
-    .marketing-feature .icon { flex-shrink: 0; margin-left: 15px; margin-right: 10px; width: 36px; height: 36px; }
-    .marketing-feature .text { flex: 1; text-align: right; text-align: justify; }
-    .marketing-feature .text h5 { font-size: 1.1rem; font-weight: bold; color: #222; }
-    .marketing-feature .text p { font-size: 0.95rem; line-height: 1.5; color: #444; margin-top: 0; }
-    .cairo-regular { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 400; font-style: normal; font-variation-settings: "slnt" 0; }
-    .cairo-bold { font-family: "Cairo", sans-serif; font-optical-sizing: auto; font-weight: 700; font-style: normal; font-variation-settings: "slnt" 0; }
-    .slider-header { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px 5px; }
-    .slider-title { font-weight: bold; font-size: 16px; color: #333; }
-    .see-more a { color: #007bff; font-weight: bold; font-size: 14px; text-decoration: none; }
-    .see-more a:hover { text-decoration: underline; }
-    .destination-slider { overflow-x: auto; white-space: nowrap; scroll-behavior: smooth; padding: 5px 10px; animation: slide 60s linear infinite; }
-    .destination-card { display: inline-block; width: 250px; height: 200px; margin: 0 5px; background: #fff; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); transition: transform 0.3s; }
-    .destination-card:hover { transform: scale(1.05); }
-    .destination-card img { width: 100%; height: 150px; border-radius: 10px 10px 0 0; object-fit: cover; }
-    .card-body { padding: 8px; text-align: center; font-size: 14px; font-weight: bold; color: #333; background: #fff; border-radius: 0 0 10px 10px; line-height: 1.5; }
-    body.dark-mode .marketing-box { background-color: #333; }
-    body.dark-mode .marketing-feature .text h5 { color: #ddd; }
-    body.dark-mode .marketing-feature .text p { color: #bbb; }
+    .destination-card {
+      background: #2a2a2a;
+      color: #fff;
+      border-radius: 12px;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      height: 100%;
+      display: inline-block;
+      width: 100%;
+      max-width: 250px;
+      margin: 5px;
+    }
+
+    .destination-card img {
+      width: 100%;
+      border-radius: 8px;
+      height: 150px;
+      object-fit: cover;
+    }
+
+    .destination-card .city-name {
+      margin-top: 10px;
+      font-size: 14px;
+      font-weight: bold;
+    }
+
+    .footer {
+      background-color: #222;
+      color: #fff;
+      text-align: center;
+      padding: 12px;
+    }
+
     body.dark-mode .destination-card { background: #444; }
-    body.dark-mode .card-body { background: #444; color: #ddd; }
-    body.dark-mode .slider-title { color: #ddd; }
-    body.dark-mode .see-more a { color: #007bff; }
-    body.dark-mode #ad-slider { box-shadow: 0 4px 10px rgba(255,255,255,0.2); }
-    @media (max-width: 992px) {
-      .navbar-collapse {
-        width: 100%;
-        left: 0;
-        padding: 15px;
-        border-radius: 0;
+    body.dark-mode .city-name { color: #ddd; }
+    @media (max-width: 768px) {
+      .destination-slider {
+        overflow-x: auto;
+        white-space: nowrap;
+        scroll-behavior: smooth;
+        padding: 5px 10px;
+      }
+      .destination-card {
+        width: 40%;
+        margin: 5px;
       }
     }
     #theme-toggle {
@@ -208,41 +208,6 @@
       z-index: 1002;
       color: white;
     }
-
-    .destinations-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr); /* صفين في كل صف */
-      gap: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .destinations-grid .destination-card {
-      background-color: #fff;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s;
-    }
-
-    .destinations-grid .destination-card:hover {
-      transform: scale(1.05);
-    }
-
-    .destinations-grid .destination-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .destinations-grid .destination-card p {
-      font-size: 1.2rem;
-      font-weight: 600;
-      margin: 10px 0;
-      color: #222;
-    }
   </style>
 </head>
 <body class="light-mode">
@@ -254,15 +219,15 @@
     <div class="collapse navbar-collapse" id="navbarNav" style="order: 3;">
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">الرئيسية</a>
+          <a class="nav-link" href="index.html">الرئيسية</a> <!-- رابط إلى index.html -->
         </li>
         <li class="nav-item">
-          <a class="nav-link toggle" href="#" onclick="toggleSubMenu(event, 'destinations')">وجهات سياحية</a>
-          <ul class="sub-menu" id="destinations">
+          <a class="nav-link toggle active" href="#" onclick="toggleSubMenu(event, 'destinations')">وجهات سياحية</a>
+          <ul class="sub-menu" id="destinations" class="active">
             <li><a href="asia.html">وجهات آسيا</a></li>
-            <li><a href="#">وجهات أوروبا</a></li>
-            <li><a href="#">وجهات أفريقيا</a></li>
-            <li><a href="#">بقية العالم</a></li>
+            <li><a href="#europe">وجهات أوروبا</a></li>
+            <li><a href="#africa">وجهات أفريقيا</a></li>
+            <li><a href="#world">بقية العالم</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -288,62 +253,35 @@
 
   <div class="main-content">
     <div class="container">
-      <div id="ad-slider">
-        <div class="ad-slide fade active"><img src="ad1.png" alt="إعلان 1"></div>
-        <div class="ad-slide fade"><img src="ad2.png" alt="إعلان 2"></div>
-        <div class="ad-slide fade"><img src="ad3.png" alt="إعلان 3"></div>
-      </div>
+      <!-- حذف مستطيلات الإعلانات (#ad-slider) -->
     </div>
 
     <div class="container my-5">
-      <div class="destinations-grid">
-        <div class="destination-card">
-          <img src="bangkok.jpg" alt="بانكوك">
-          <p>بانكوك</p>
-        </div>
-        <div class="destination-card">
-          <img src="riyadh.jpg" alt="الرياض">
-          <p>الرياض</p>
-        </div>
-        <div class="destination-card">
-          <img src="maldiv.jpg" alt="مالديف">
-          <p>مالديف</p>
-        </div>
-        <div class="destination-card">
-          <img src="dubai.jpg" alt="دبي">
-          <p>دبي</p>
-        </div>
-        <div class="destination-card">
-          <img src="kuala.jpg" alt="كوالالمبور">
-          <p>كوالالمبور</p>
-        </div>
-        <div class="destination-card">
-          <img src="singa.jpg" alt="سنغافورة">
-          <p>سنغافورة</p>
-        </div>
-        <div class="destination-card">
-          <img src="manila.jpg" alt="مانيلا">
-          <p>مانيلا</p>
-        </div>
-        <div class="destination-card">
-          <img src="tokio.jpg" alt="طوكيو">
-          <p>طوكيو</p>
-        </div>
-        <div class="destination-card">
-          <img src="bali.jpg" alt="بالي">
-          <p>بالي</p>
-        </div>
-        <div class="destination-card">
-          <img src="hanoi.jpg" alt="هانوي">
-          <p>هانوي</p>
+      <div class="row text-center g-4 justify-con">
+        <div id="asia">
+          <div class="slider-header">
+            <h5 class="slider-title cairo-bold">وجهات آسيا</h5>
+            <div class="see-more"><a href="#">المزيد</a></div>
+          </div>
+          <div class="destination-slider">
+            <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="city-name cairo-bold">بانكوك</div></div>
+            <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="city-name cairo-bold">الرياض</div></div>
+            <div class="destination-card"><img src="maldiv.jpg" alt="مالديف"><div class="city-name cairo-bold">مالديف</div></div>
+            <div class="destination-card"><img src="dubai.jpg" alt="دبي"><div class="city-name cairo-bold">دبي</div></div>
+            <div class="destination-card"><img src="kuala.jpg" alt="كوالالمبور"><div class="city-name cairo-bold">كوالالمبور</div></div>
+            <div class="destination-card"><img src="singa.jpg" alt="سنغافورة"><div class="city-name cairo-bold">سنغافورة</div></div>
+            <div class="destination-card"><img src="manila.jpg" alt="مانيلا"><div class="city-name cairo-bold">مانيلا</div></div>
+            <div class="destination-card"><img src="tokio.jpg" alt="طوكيو"><div class="city-name cairo-bold">طوكيو</div></div>
+            <div class="destination-card"><img src="bali.jpg" alt="بالي"><div class="city-name cairo-bold">بالي</div></div>
+            <div class="destination-card"><img src="hanoi.jpg" alt="هانوي"><div class="city-name cairo-bold">هانوي</div></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="footer">
-    <p class="cairo-regular">جميع الحقوق محفوظة © Paygo 2025</p>
-  </div>
+    <div class="footer">
+      <p class="cairo-regular">جميع الحقوق محفوظة © Paygo 2025</p>
+    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
@@ -357,69 +295,3 @@
 
     // تغيير اللغة
     function changeLanguage(lang) {
-      if (lang === 'en') {
-        alert('Switching to English (Feature to be implemented)');
-      } else {
-        alert('اللغة العربية مفعلة بالفعل');
-      }
-    }
-
-    // وظيفة لتبديل القوائم المنسدلة مع تأثير التلاشي
-    function toggleSubMenu(event, menuId) {
-      event.preventDefault();
-      const menu = document.getElementById(menuId);
-      const toggle = event.target;
-      const isActive = toggle.classList.contains('active');
-
-      document.querySelectorAll('.sub-menu').forEach(subMenu => {
-        subMenu.classList.remove('active');
-        subMenu.style.opacity = '0';
-        setTimeout(() => {
-          if (!subMenu.classList.contains('active')) subMenu.style.display = 'none';
-        }, 300);
-      });
-      document.querySelectorAll('.nav-link.toggle').forEach(link => {
-        link.classList.remove('active');
-      });
-
-      if (!isActive) {
-        menu.style.display = 'block';
-        setTimeout(() => {
-          menu.classList.add('active');
-          menu.style.opacity = '1';
-        }, 10);
-        toggle.classList.add('active');
-      }
-    }
-
-    // إخفاء القائمة المنسدلة عند الضغط في أي مكان
-    document.addEventListener('click', (event) => {
-      const navbarCollapse = document.getElementById('navbarNav');
-      const toggler = document.querySelector('.navbar-toggler');
-      if (!navbarCollapse.contains(event.target) && !toggler.contains(event.target)) {
-        const collapse = new bootstrap.Collapse(navbarCollapse, { toggle: false });
-        collapse.hide();
-        document.querySelectorAll('.sub-menu').forEach(subMenu => {
-          subMenu.classList.remove('active');
-          subMenu.style.opacity = '0';
-          setTimeout(() => {
-            if (!subMenu.classList.contains('active')) subMenu.style.display = 'none';
-          }, 300);
-        });
-        document.querySelectorAll('.nav-link.toggle').forEach(link => {
-          link.classList.remove('active');
-        });
-      }
-    });
-
-    let adIndex = 0;
-    const ads = document.querySelectorAll('.ad-slide');
-    function showNextAd() {
-      ads[adIndex].classList.remove('active');
-      adIndex = (adIndex + 1) % ads.length;
-      ads[adIndex].classList.add('active');
-    }
-    setInterval(showNextAd, 10000);
-  </script>
-</body>
-</html>
