--- a/asia.html
+++ b/asia.html
@@ -157,7 +157,7 @@
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.3);
       width: 48%; /* لضمان صورتين بجانب بعضهما */
-      max-width: 200px; /* تصغير الحجم ليناسب الجوال */
+      max-width: 180px; /* حجم معدل ليناسب الجوال */
     }
 
     .destination-card img {
@@ -190,7 +190,7 @@
       }
       .destination-card {
         width: 80%; /* تقليل الحجم على الجوال */
-        max-width: 150px;
+        max-width: 140px;
         margin-bottom: 10px;
       }
     }
