--- a/asia.html
+++ b/asia.html
@@ -147,6 +147,7 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 20px;
+      width: 100%; /* لضمان ملء السطر */
     }
 
     .destination-card {
@@ -156,7 +157,7 @@
       padding: 10px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      width: 48%; /* لضمان صورتين بجانب بعضهما */
+      width: 49%; /* توزيع متساوٍ لملء السطر */
       max-width: 180px; /* حجم معدل ليناسب الجوال */
     }
 
@@ -189,7 +190,7 @@
         align-items: center;
       }
       .destination-card {
-        width: 80%; /* تقليل الحجم على الجوال */
+        width: 100%; /* ملء العرض الكامل على الجوال */
         max-width: 140px;
         margin-bottom: 10px;
       }
