--- a/asia.html
+++ b/asia.html
@@ -157,7 +157,7 @@
       padding: 10px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      width: 49%; /* توزيع متساوٍ لملء السطر */
+      width: 49%; /* توزيع متساوٍ لملء السطر أفقيًا */
       max-width: 180px; /* حجم معدل ليناسب الجوال */
     }
 
@@ -186,13 +186,13 @@
 
     @media (max-width: 768px) {
       .destination-pair {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row; /* الحفاظ على التخطيط الأفقي */
+        justify-content: space-around; /* توزيع متساوٍ مع مساحة إضافية */
       }
       .destination-card {
-        width: 100%; /* ملء العرض الكامل على الجوال */
+        width: 48%; /* تقليل الحجم قليلاً ليناسب الشاشة الصغيرة */
         max-width: 140px;
-        margin-bottom: 10px;
+        margin: 0 1%;
       }
     }
 
