--- a/asia.html
+++ b/asia.html
@@ -151,7 +151,7 @@
     }
 
     .destination-card {
-      background: #2a2a2a;
+      background: #ffffff;
       color: #fff;
       border-radius: 12px;
       padding: 10px;
@@ -265,9 +265,8 @@
       <div class="row text-center g-4 justify-con">
         <div id="asia">
           <div class="slider-header">
-            <h5 class="slider-title cairo-bold">وجهات آسيا</h5>
-            <div class="see-more"><a href="#">المزيد</a></div>
-          </div>
+  <h5 class="slider-title cairo-bold" style="font-weight: bold;">وجهات آسيا</h5>
+</div>
           <div class="destinations">
             <div class="destination-pair">
               <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="city-name cairo-bold">بانكوك</div></div>
