--- a/asia.html
+++ b/asia.html
@@ -214,6 +214,16 @@
       z-index: 1002;
       color: white;
     }
+    
+    .description-box {
+  background-color: #f5e8c7; /* لون رملي فاتح */
+  padding: 15px;
+  border-radius: 8px;
+  margin-top: 10px;
+  font-size: 14px; /* خط أصغر من العنوان */
+  text-align: justify;
+  color: #000;
+}
   </style>
 </head>
 <body class="light-mode">
@@ -267,6 +277,9 @@
         <div id="asia">
           <div class="slider-header">
   <h5 class="slider-title cairo-bold" style="font-weight: bold;">وجهات آسيا</h5>
+  <div class="description-box">
+    تتميز قارة آسيا سياحيًا بتنوع ثقافي وجغرافي مذهل يجعلها من أكثر الوجهات جذبًا للسياح في العالم. فهي تضم معالم تاريخية عريقة مثل سور الصين العظيم ومعابد أنغكور وات في كمبوديا، ومناظر طبيعية خلابة كجبال الهيمالايا وشواطئ جزر المالديف وتايلاند. كما تشتهر بمدنها النابضة بالحياة مثل طوكيو، دبي، الرياض، وبانكوك، وتجاربها الفريدة مثل الأسواق الشعبية، الأطعمة المتنوعة، والمنتجعات الفاخرة. آسيا تقدم مزيجًا رائعًا من الأصالة والحداثة، ما يجعلها وجهة ساحرة لعشاق المغامرة والثقافة والاسترخاء.
+  </div>
 </div>
           <div class="destinations">
             <div class="destination-pair">
