--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
   flex-direction: column;
   gap: 0px;
 }
+body.dark-mode .marketing-box {
+  background-image: url('map.png'); /* نفس الصورة */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgba(249, 244, 234, 0.3); /* شفافية عالية للون البيج */
+}
   .marketing-feature { display: flex; align-items: flex-start; padding: 0 24px; padding-left: 32px; line-height: 1.7; word-break: break-word; margin-bottom: 0; padding-top: 0; padding-bottom: 0; }
   .marketing-feature:not(:last-child) { margin-bottom: 0; }
   .marketing-feature .icon { flex-shrink: 0; margin-left: 15px; margin-right: 10px; width: 36px; height: 36px; }
